--- a/src/app/parts/header/header.component.less
+++ b/src/app/parts/header/header.component.less
@@ -11,6 +11,8 @@
 
 .header-title {
   color: @color-white;
+  width: 15%;
+  font-family: hogwartsBold;
 }
 
 .header-login-icon {
@@ -37,7 +39,8 @@
 .menu-element-inactive {
   .menu-element;
 
-  opacity: 0.8;
+  font-family: hogwartsRegular;
+  opacity: 0.7;
 }
 
 .menu-element-inactive:hover {
@@ -48,6 +51,7 @@
 .menu-element-active {
   .menu-element;
 
+  font-family: hogwartsBold;
   opacity: 1;
 }
 
