--- a/src/app/pages/cabinets-list/cabinets-list.page.html
+++ b/src/app/pages/cabinets-list/cabinets-list.page.html
@@ -1,15 +1,11 @@
 <div class="page">
   <app-header [activeSection]="'CABINETS'"></app-header>
 
-  <div class="list-header">
-    <div class="cabinets-list-header-search">
-      <div class="input-group list-header-input">
-        <span class="input-group-addon">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </span>
-
-        <input class="form-control" placeholder="Название" (keyup)="onSearchChange($event.target.value)">
-      </div>
+  <div class="list-header-container">
+    <div class="list-header">
+      <div app-search-text-input-control class="cabinets-list-header-search"
+           [placeholder]="'Название'"
+           (onChange)="onSearchChange($event)"></div>
     </div>
 
     <div class="cabinets-list-header-add-new">
@@ -18,6 +14,7 @@
       </button>
     </div>
   </div>
+
 
   <div class="list-content">
     <div class="page-loading" *ngIf="loadingInProgress">
