--- a/src/app/pages/groups-list/groups-list.page.less
+++ b/src/app/pages/groups-list/groups-list.page.less
@@ -5,12 +5,31 @@
 }
 
 .groups-list-header-search {
-  width: 20%;
   padding-right: 20px;
 }
 
+.groups-name-column {
+  width: 25%;
+}
+
+.groups-age-column {
+  width: 20%;
+}
+
+.groups-cabinets-column {
+  width: 20%;
+}
+
+.groups-education-level-column {
+  width: 20%;
+}
+
 .groups-list-header-add-new {
-  width: 15%;
+  position: absolute;
+  left: 90%;
+  width: 10%;
+  margin-top: 10px;
+  padding-right: 20px;
 }
 
 .groups-list-item-color {
@@ -22,10 +41,4 @@
   width: 20px;
   height: 20px;
   border-radius: 10px;
-}
-
-.groups-list-item-search {
-  .list-row-item;
-
-  width: 20%;
 }
