--- a/src/app/pages/students-list/students-list.page.html
+++ b/src/app/pages/students-list/students-list.page.html
@@ -1,61 +1,26 @@
 <div class="page">
   <app-header [activeSection]="'STUDENTS'"></app-header>
 
-  <div class="list-header">
-    <div style="width: 5%">
-    </div>
+  <div class="list-header-container">
+    <div class="list-header">
+      <div class="student-validation-column"></div>
 
-    <div style="width: 20%" class="students-list-header-search">
-      <div class="input-group">
-        <span class="input-group-addon">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </span>
+      <div app-search-text-input-control class="students-list-header-search student-name-column"
+           [placeholder]="'Имя'"
+           (onChange)="onNameFilterChange($event)"></div>
 
-        <input class="form-control" placeholder="Имя" (keyup)="onNameFilterChange($event.target.value)">
-      </div>
-    </div>
+      <div app-search-select-control class="students-list-header-search student-education-level-column"
+           [items]="getEducationLevelItems()"
+           (onChange)="onEducationLevelFilterChange($event)"></div>
 
-    <div style="width: 20%" class="students-list-header-search">
-      <div class="input-group">
-        <span class="input-group-addon">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </span>
+      <div app-search-select-control class="students-list-header-search student-age-column"
+           [items]="getAgeItems()"
+           (onChange)="onAgeFilterChange($event)"></div>
 
-        <select class="form-control" (change)="onEducationLevelFilterChange($event.target.value)">
-          <option *ngFor="let educationLevel of educationLevels" value="{{educationLevel}}">
-            {{educationLevel === 'UNKNOWN' ? 'Все уровни' : getEducationLevelTranslation(educationLevel)}}
-          </option>
-        </select>
-      </div>
-    </div>
+      <div app-search-select-control class="students-list-header-search student-status-column"
+           [items]="getStatusItems()"
+           (onChange)="onStatusFilterChange($event)"></div>
 
-    <div style="width: 20%" class="students-list-header-search">
-      <div class="input-group">
-        <span class="input-group-addon">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </span>
-
-        <select class="form-control" (change)="onAgeFilterChange($event.target.value)">
-          <option *ngFor="let age of ages" value="{{age}}">
-            {{age === 'UNKNOWN' ? 'Все возрастные категории' : getAgeTranslationAsGroup(age)}}
-          </option>
-        </select>
-      </div>
-    </div>
-
-    <div style="width: 20%" class="students-list-header-search">
-      <div class="input-group">
-        <span class="input-group-addon">
-          <i class="fa fa-search" aria-hidden="true"></i>
-        </span>
-
-        <select class="form-control" (change)="onStatusFilterChange($event.target.value)">
-          <option value="{{null}}">Все</option>
-          <option *ngFor="let status of statuses" value="{{status}}">
-            {{age === 'UNKNOWN' ? 'Все статусы' : getStudentStatusTypeTranslation(status)}}
-          </option>
-        </select>
-      </div>
     </div>
 
     <div class="students-list-header-add-new">
@@ -71,22 +36,20 @@
     </div>
 
     <div *ngFor="let student of students" class="list-row-clickable" (click)="openStudentPage(student.id)">
-      <div class="list-row-item" style="width: 5%">
+      <div class="list-row-item student-validation-column">
         <app-field-validation-sign [valid]="isStudentFilled(student)"></app-field-validation-sign>
       </div>
-      <div class="list-row-item" style="width: 20%">
+      <div class="list-row-item student-name-column">
         {{student.name}}
       </div>
-      <div class="list-row-item" style="width: 20%">
+      <div class="list-row-item student-education-level-column">
         {{getEducationLevelTranslation(student.educationLevel)}}
       </div>
-      <div class="list-row-item" style="width: 20%">
+      <div class="list-row-item student-age-column">
         {{getAgeTranslationAsGroup(student.age)}}
       </div>
-      <div class="list-row-item" style="width: 20%">
+      <div class="list-row-item student-status-column">
         {{getStudentStatusTypeTranslation(student.statusType)}}
-      </div>
-      <div class="list-row-item" style="width: 15%">
       </div>
     </div>
   </div>
