--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -1,5 +1,33 @@
 @import "../../../styles.less";
 
+.student-validation-column {
+  width: 5%;
+}
+
+.student-name-column {
+  width: 25%;
+}
+
+.student-education-level-column {
+  width: 20%;
+}
+
+.student-age-column {
+  width: 20%;
+}
+
+.student-status-column {
+  width: 20%;
+}
+
+.students-list-header-add-new {
+  position: absolute;
+  left: 90%;
+  width: 10%;
+  margin-top: 10px;
+  padding-right: 20px;
+}
+
 .student-state {
   margin-right: 10px;
 }
@@ -18,10 +46,6 @@
 
 .students-list-header-search {
   padding-right: 20px;
-}
-
-.students-list-header-add-new {
-  width: 15%;
 }
 
 .student-invalid {
