--- a/src/app/pages/teachers-list/teachers-list.page.less
+++ b/src/app/pages/teachers-list/teachers-list.page.less
@@ -1,9 +1,13 @@
 @import "../../../styles/colors.less";
 
 .teachers-list-header-search {
-  width: 70%;
+  width: 90%;
 }
 
 .teachers-list-header-add-new {
-  width: 30%;
+  position: absolute;
+  left: 90%;
+  width: 10%;
+  margin-top: 10px;
+  padding-right: 20px;
 }
