--- a/src/app/parts/header/header.component.html
+++ b/src/app/parts/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header">
-  <div style="flex-grow: 1">
-    <span class="header-title">Hogwarts Admin v1.0.3</span>
+  <div class="header-title">
+    <span>Hogwarts Admin v1.1.0</span>
   </div>
 
-  <div style="flex-grow: 5">
+  <div style="width: 70%">
     <span (click)="navigate('/students')"
          [class.menu-element-active]="activeSection === 'STUDENTS'"
          [class.menu-element-inactive]="activeSection !== 'STUDENTS'">
@@ -41,8 +41,8 @@
     </span>
   </div>
 
-  <div style="flex-grow: 1">
-    <button class="btn btn-primary pull-right header-logout-button" (click)="logOff()">Выйти</button>
+  <div style="width: 15%">
+    <button class="btn btn-default pull-right header-logout-button app-button" (click)="logOff()">Выйти</button>
     <span class="pull-right header-login">Сергей Будник</span>
     <i class="fa fa-user header-login-icon pull-right" aria-hidden="true"></i>
   </div>
