--- a/src/styles/list.less
+++ b/src/styles/list.less
@@ -1,11 +1,21 @@
 @import "colors.less";
+@import "fonts.less";
+
+.list-header-container {
+  display: flex;
+  flex-direction: row;
+  background: @color-gray-2;
+  min-height: 60px;
+  padding-right: 20px;
+}
 
 .list-header {
   display: flex;
   flex-direction: row;
+  width: calc(~'100% - 16px');
   min-height: 60px;
   margin-right: 16px;
-  padding: 10px 20px;
+  padding: 10px 0 20px 10px;
   background: @color-gray-2;
 }
 
@@ -13,6 +23,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  min-height: calc(~'100% - 50px - 60px');
 }
 
 .list-row {
@@ -39,4 +50,6 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 15px;
+  font-family: hogwartsRegular;
 }
