--- a/src/styles/page.less
+++ b/src/styles/page.less
@@ -12,6 +12,10 @@
   flex-grow: 1;
 }
 
+.menu-item-icon {
+  width: 30px;
+}
+
 .page-left-menu {
   display: flex;
   flex-direction: column;
@@ -28,12 +32,14 @@
   .page-left-menu-item;
 
   color: @color-primary-normal-1;
+  font-family: hogwartsBold;
 }
 
 .page-left-menu-item-inactive {
   .page-left-menu-item;
 
   cursor: pointer;
+  font-family: hogwartsRegular;
 }
 
 .page-left-menu-item-inactive:hover {
