--- a/src/app/pages/student/menu/student-menu.component.html
+++ b/src/app/pages/student/menu/student-menu.component.html
@@ -1,7 +1,7 @@
 <div [class.page-left-menu-item-active]="currentTab === 'INFORMATION'"
      [class.page-left-menu-item-inactive]="currentTab !== 'INFORMATION'"
      (click)="navigateTo('information')">
-  <i class="fa fa-info-circle" aria-hidden="true"></i>
+  <i class="fa fa-info-circle menu-item-icon" aria-hidden="true"></i>
   <span class="horizontal-item">Информация</span>
 </div>
 
@@ -9,7 +9,7 @@
      [class.page-left-menu-item-active]="currentTab === 'ATTENDANCE'"
      [class.page-left-menu-item-inactive]="currentTab !== 'ATTENDANCE'"
      (click)="navigateTo('attendance')">
-  <i class="fa fa-users" aria-hidden="true"></i>
+  <i class="fa fa-users menu-item-icon" aria-hidden="true"></i>
   <span class="horizontal-item">Посещаемость</span>
 </div>
 
@@ -17,6 +17,6 @@
      [class.page-left-menu-item-active]="currentTab === 'PAYMENT'"
      [class.page-left-menu-item-inactive]="currentTab !== 'PAYMENT'"
      (click)="navigateTo('payment')">
-  <i class="fa fa-clock-o" aria-hidden="true"></i>
+  <i class="fa fa-money menu-item-icon" aria-hidden="true"></i>
   <span class="horizontal-item">Оплата</span>
 </div>
