--- a/src/app/controls/form-tag-control/form-tag.control.html
+++ b/src/app/controls/form-tag-control/form-tag.control.html
@@ -1,9 +1,12 @@
 <app-field-validation-sign [valid]="valid"></app-field-validation-sign>
 
 <label for="{{name}}">{{label}}:</label>
-<tag-input id="{{name}}" name="{{name}}" class="form-control" [(ngModel)]="valueRef.value"
+<tag-input id="{{name}}" class="form-control"
+           [ngModel]="valueRef.getValue()"
            [modelAsStrings]="true"
            [separatorKeyCodes]="[9, 14, 32]"
            [placeholder]="placeholder"
-           [secondaryPlaceholder]="placeholder">
+           [secondaryPlaceholder]="placeholder"
+           (onAdd)="onValueAdded($event)"
+           (onRemove)="onValueRemoved($event)">
 </tag-input>
