--- a/src/app/controls/form-text-input-control/form-text-input.control.html
+++ b/src/app/controls/form-text-input-control/form-text-input.control.html
@@ -6,5 +6,5 @@
 
 <input id="{{name}}" name="{{name}}" class="form-control"
        required minlength="1"
-       [(ngModel)]="valueRef.value" #name="ngModel"
+       [value]="valueRef.getValue()"
        (keyup)="onValueChange($event.target.value)"/>
