--- a/src/app/controls/form-select-control/form-select.control.html
+++ b/src/app/controls/form-select-control/form-select.control.html
@@ -3,8 +3,8 @@
 
   {{label}}:
 </label>
-<select id="status" class="form-control" name="status" [(ngModel)]="valueRef.value" (change)="onValueChange($event.target.value)">
-  <option *ngFor="let item of items" value="{{item.value}}" [attr.selected]="valueRef.value === item.value ? 'selected' : null">
+<select id="status" class="form-control" name="status" (change)="onValueChange($event.target.value)">
+  <option *ngFor="let item of items" value="{{item.value}}" [attr.selected]="valueRef.getValue() === item.value ? 'selected' : null">
     {{item.name}}
   </option>
 </select>
