--- a/src/app/templates/modal/modal.template.html
+++ b/src/app/templates/modal/modal.template.html
@@ -1,6 +1,13 @@
-<div class="modal fade" id="addAttendance" tabindex="-1" role="dialog" aria-labelledby="addAttendanceLabel" aria-hidden="true">
+<div id="{{id}}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" #modal>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addAttendanceLabel">{{title}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" #closeButton>
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
       <ng-content></ng-content>
     </div>
   </div>
