--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -20,6 +20,46 @@
   width: 20%;
 }
 
+.student-status-label {
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.student-status-label-request {
+  .student-status-label;
+
+  background-color: #cc8800;
+  color: #ffffff;
+}
+
+.student-status-test-assigned {
+  .student-status-label;
+
+  background-color: #009955;
+  color: #ffffff;
+}
+
+.student-status-label-free-lesson-assigned {
+  .student-status-label;
+
+  background-color: #559900;
+  color: #ffffff;
+}
+
+.student-status-label-group-assigned {
+  .student-status-label;
+
+  background-color: #00aa00;
+  color: #ffffff;
+}
+
+.student-status-label-temporarily-stopped {
+  .student-status-label;
+
+  background-color: #aa0000;
+  color: #ffffff;
+}
+
 .students-list-header-add-new {
   position: absolute;
   left: 90%;
