--- a/src/app/pages/groups-list/groups-list.page.less
+++ b/src/app/pages/groups-list/groups-list.page.less
@@ -32,6 +32,14 @@
   padding-right: 20px;
 }
 
+.group-list-row-inactive {
+  color: #ff0000;
+}
+
+.group-list-row-inactive:hover {
+  color: #ff0000;
+}
+
 .groups-list-item-color {
   width: 5%;
   padding-top: 15px;
