show correct group location

--- a/src/app/pages/groups-list/groups-list.page.html
+++ b/src/app/pages/groups-list/groups-list.page.html
@@ -53,7 +53,7 @@
         {{getAgeTranslationAsGroup(group.age)}}
       </div>
       <div class="list-row-item groups-cabinets-column">
-        {{'Офис Хогвартс. Приморская'}}
+        {{getGroupCabinet(group.id).name}}
       </div>
     </div>
   </div>
