--- a/src/app/pages/groups-list/groups-list.page.html
+++ b/src/app/pages/groups-list/groups-list.page.html
@@ -5,8 +5,12 @@
     <div class="list-header">
       <div class="groups-list-header-color"></div>
 
-      <div app-search-text-input-control class="groups-list-header-search groups-name-column"
-           [placeholder]="'Название'"
+      <div app-search-select-control class="groups-list-header-search groups-type-column"
+           [items]="getGroupTypeItems()"
+           (onChange)="onGroupTypeFilterChange($event)"></div>
+
+      <div app-search-text-input-control class="groups-list-header-search groups-book-name-column"
+           [placeholder]="'Название книги'"
            (onChange)="onNameFilterChange($event)"></div>
 
       <div app-search-select-control class="groups-list-header-search groups-education-level-column"
@@ -43,8 +47,11 @@
         <div class="groups-list-item-color-circle" [style.background-color]="group.color">
         </div>
       </div>
-      <div class="list-row-item groups-name-column">
-        {{group.name}}
+      <div class="list-row-item groups-type-column">
+        {{getGroupTypeTranslation(group.type)}}
+      </div>
+      <div class="list-row-item groups-book-name-column">
+        {{group.bookName}}
       </div>
       <div class="list-row-item groups-education-level-column">
         {{getEducationLevelTranslation(group.educationLevel)}}
@@ -54,6 +61,9 @@
       </div>
       <div class="list-row-item groups-cabinets-column">
         {{getGroupCabinet(group.id).name}}
+      </div>
+      <div class="list-row-item groups-students-column">
+        {{getGroupStudentsString(group.id)}}
       </div>
     </div>
   </div>
