--- a/src/app/pages/groups-list/groups-list.page.less
+++ b/src/app/pages/groups-list/groups-list.page.less
@@ -8,19 +8,27 @@
   padding-right: 20px;
 }
 
-.groups-name-column {
-  width: 25%;
+.groups-type-column {
+  width: 15%;
+}
+
+.groups-book-name-column {
+  width: 15%;
 }
 
 .groups-age-column {
-  width: 20%;
+  width: 15%;
 }
 
 .groups-cabinets-column {
-  width: 20%;
+  width: 15%;
 }
 
 .groups-education-level-column {
+  width: 15%;
+}
+
+.groups-students-column {
   width: 20%;
 }
 
