--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -56,6 +56,13 @@
 .student-status-label-temporarily-stopped {
   .student-status-label;
 
+  background-color: #6f6e6f;
+  color: #ffffff;
+}
+
+.student-status-label-left {
+  .student-status-label;
+
   background-color: #aa0000;
   color: #ffffff;
 }
