copy to clipboard feature

--- a/src/app/controls/form-tag-control/form-tag.control.html
+++ b/src/app/controls/form-tag-control/form-tag.control.html
@@ -8,5 +8,6 @@
            [placeholder]="placeholder"
            [secondaryPlaceholder]="placeholder"
            (onAdd)="onValueAdded($event)"
-           (onRemove)="onValueRemoved($event)">
+           (onRemove)="onValueRemoved($event)"
+           (onSelect)="onValueSelected($event)">
 </tag-input>
