--- a/src/app/pages/students-list/students-list.page.html
+++ b/src/app/pages/students-list/students-list.page.html
@@ -49,7 +49,7 @@
         {{getAgeTranslationAsGroup(student.age)}}
       </div>
       <div class="list-row-item student-status-column">
-        <span
+        <div
           [class.student-status-label-request]="student.statusType == 'REQUEST'"
           [class.student-status-label-test-assigned]="student.statusType == 'TEST_ASSIGNED'"
           [class.student-status-label-free-lesson-assigned]="student.statusType == 'FREE_LESSON_ASSIGNED'"
@@ -57,7 +57,7 @@
           [class.student-status-label-temporarily-stopped]="student.statusType == 'TEMPORARILY_STOPPED'"
           [class.student-status-label-left]="student.statusType == 'LEFT'">
           {{getStudentStatusTypeTranslation(student.statusType)}}
-        </span>
+        </div>
       </div>
     </div>
   </div>
