--- a/src/app/pages/students-list/students-list.page.less
+++ b/src/app/pages/students-list/students-list.page.less
@@ -23,6 +23,10 @@
 .student-status-label {
   padding: 5px 10px;
   border-radius: 5px;
+  line-height: 20px;
+  margin-top: 10px;
+  margin-right: 20px;
+  text-align: center;
 }
 
 .student-status-label-request {
