--- a/src/styles.less
+++ b/src/styles.less
@@ -6,6 +6,7 @@
 @import "styles/buttons.less";
 @import "styles/tag-input.less";
 @import "styles/controls.less";
+@import 'styles/student-status.less';
 
 .no-padding {
   padding: 0 !important;
