tag input rework text input rework

--- a/src/app/controls/form-tag-control/form-tag.control.html
+++ b/src/app/controls/form-tag-control/form-tag.control.html
@@ -2,7 +2,7 @@
 
 <label for="{{name}}">{{label}}:</label>
 <tag-input id="{{name}}" class="form-control"
-           [ngModel]="valueRef.getValue()"
+           [ngModel]="value"
            [modelAsStrings]="true"
            [separatorKeyCodes]="[9, 14, 32]"
            [placeholder]="placeholder"
