--- a/src/app/pages/student/information/student-information.page.html
+++ b/src/app/pages/student/information/student-information.page.html
@@ -26,21 +26,24 @@
                [label]="'Имя'"
                [placeholder]="'Введите имя'"
                [valid]="!!student.name && student.name.indexOf('?') === -1"
-               [valueRef]="nameReference"></div>
+               [value]="student.name"
+               (onChange)="student.name = $event"></div>
 
           <div app-form-tag-control class="form-group"
                [name]="'telephones'"
                [label]="'Телефоны'"
                [placeholder]="'Введите телефон'"
                [valid]="student.phones.length !== 0 || student.emails.length !== 0"
-               [valueRef]="telephonesReference"></div>
+               [value]="student.phones"
+               (onChange)="student.phones = $event"></div>
 
           <div app-form-tag-control class="form-group"
                [name]="'emails'"
                [label]="'Email'"
                [placeholder]="'Введите email'"
                [valid]="student.phones.length !== 0 || student.emails.length !== 0"
-               [valueRef]="emailsReference"></div>
+               [value]="student.emails"
+               (onChange)="student.emails = $event"></div>
 
           <div app-form-select-control class="form-group"
                [name]="'educationLevel'"
