--- a/src/app/parts/student/payment-modal/student-payment.modal.html
+++ b/src/app/parts/student/payment-modal/student-payment.modal.html
@@ -13,7 +13,7 @@
            [name]="'amount'"
            [label]="'Сумма'"
            [placeholder]="'Введите сумму'"
-           [valueRef]="amountReference"
+           [value]="amountString"
            [valid]="!!amount"
            (onChange)="onAmountChange($event)">
       </div>
