--- a/src/app/pages/student/information/student-information.page.html
+++ b/src/app/pages/student/information/student-information.page.html
@@ -49,7 +49,7 @@
                [name]="'educationLevel'"
                [label]="'Уровень подготовки'"
                [valid]="student.educationLevel !== 'UNKNOWN'"
-               [valueRef]="educationLevelReference"
+               [value]="student.educationLevel"
                [items]="getEducationLevelItems()"
                (onChange)="onEducationLevelChange($event)"></div>
 
@@ -57,7 +57,7 @@
                [name]="'referralSource'"
                [label]="'Откуда узнал'"
                [valid]="student.referralSource !== 'UNKNOWN'"
-               [valueRef]="referralSourceReference"
+               [value]="student.referralSource"
                [items]="getReferralSourceItems()"
                (onChange)="onReferralSourceChange($event)"></div>
 
@@ -65,7 +65,7 @@
                [name]="'age'"
                [label]="'Возраст'"
                [valid]="student.age !== 'UNKNOWN'"
-               [valueRef]="ageReference"
+               [value]="student.age"
                [items]="getAgeItems()"
                (onChange)="onAgeChange($event)"></div>
 
@@ -73,7 +73,7 @@
                [name]="'status'"
                [label]="'Статус'"
                [valid]="student.statusType !== 'UNKNOWN'"
-               [valueRef]="statusReference"
+               [value]="student.statusType"
                [items]="getStatusItems()"
                (onChange)="onStatusTypeChange($event)"></div>
 
