--- a/src/app/pages/student/status/student-status.page.html
+++ b/src/app/pages/student/status/student-status.page.html
@@ -4,7 +4,7 @@
   <div class="page-elements">
     <div class="page-left-menu" app-student-menu [studentId]="student.id" [currentTab]="'STATUS'"></div>
 
-    <div class="page-content-with-footer">
+    <div class="page-content-with-footer" *ngIf="!!student.id">
       <div *ngIf="loadingInProgress" class="page-loading">
         <fa name="spinner" animation="spin"></fa>
       </div>
@@ -28,57 +28,74 @@
 
           <br>
 
-          <div *ngIf="currentStudentStatus.status == 'REQUEST'">
-            <div app-form-text-input-control class="form-group"
-                 [name]="'currentActionDate'"
-                 [label]="'Перезвонить'"
-                 [valueRef]="nameReference"
-                 [placeholder]="''"
-                 [valid]="true"></div>
-          </div>
-
+          <div *ngIf="hasAction(currentStudentStatus.status)" app-form-text-input-control class="form-group"
+               [name]="'currentActionDate'"
+               [label]="getActionLabel()"
+               [value]="currentStudentStatus.actionTime | date: 'dd.MM.yyyy'"
+               [placeholder]="''"
+               [valid]="true"></div>
 
           <!-- Status update buttons -->
 
           <div *ngIf="currentStudentStatus.status === 'REQUEST'">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="setNewStudentStatus('TEST_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
               Назначить тестирование
             </button>
 
-            <button class="btn btn-warning">
+            <button class="btn btn-warning" (click)="setNewStudentStatus('REQUEST')" data-toggle="modal" data-target="#studentStatus">
               Перезвонить
             </button>
 
-            <button class="btn btn-danger">
+            <button class="btn btn-danger" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
               Студент отказался от занятий
             </button>
           </div>
 
           <div *ngIf="currentStudentStatus.status === 'TEST_ASSIGNED'">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="setNewStudentStatus('FREE_LESSON_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
               Тестирование проведено
             </button>
 
-            <button class="btn btn-warning">
+            <button class="btn btn-warning" (click)="setNewStudentStatus('TEST_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
               Тестирование перенесено
             </button>
 
-            <button class="btn btn-danger">
+            <button class="btn btn-danger" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
               Студент отказался от тестирования
             </button>
           </div>
 
           <div *ngIf="currentStudentStatus.status === 'FREE_LESSON_ASSIGNED'">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="setNewStudentStatus('GROUP_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
               Бесплатное занятие проведено
             </button>
 
-            <button class="btn btn-warning">
+            <button class="btn btn-warning" (click)="setNewStudentStatus('TEST_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
               Бесплатное занятие перенесено
             </button>
 
-            <button class="btn btn-danger">
+            <button class="btn btn-danger" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
               Студент отказался от бесплатного занятия
+            </button>
+          </div>
+
+          <div *ngIf="currentStudentStatus.status === 'GROUP_ASSIGNED'">
+            <button class="btn btn-primary" (click)="setNewStudentStatus('TEMPORARILY_STOPPED')" data-toggle="modal" data-target="#studentStatus">
+              Временно приостановил
+            </button>
+
+            <button class="btn btn-danger" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
+              Покинул
+            </button>
+          </div>
+
+          <div *ngIf="currentStudentStatus.status === 'TEMPORARILY_STOPPED'">
+            <button class="btn btn-primary" (click)="setNewStudentStatus('GROUP_ASSIGNED')" data-toggle="modal" data-target="#studentStatus">
+              Возобновил занятия
+            </button>
+
+            <button class="btn btn-danger" (click)="setNewStudentStatus('LEFT')" data-toggle="modal" data-target="#studentStatus">
+              Покинул
             </button>
           </div>
 
@@ -90,12 +107,12 @@
 
           <br>
 
-          <div class="list-content">
+          <div class="list-content" style="overflow: visible">
             <div *ngFor="let studentStatus of studentStatuses" class="list-row-clickable">
-              <div class="list-row-item" style="width: 80%;">
+              <div class="list-row-item" style="width: 70%;">
                 {{studentStatus.creationTime | date: 'dd.MM.yyyy'}}
               </div>
-              <div class="list-row-item" style="width: 20%;">
+              <div class="list-row-item" style="width: 30%;">
                 <div [class.student-status-label-request]="studentStatus.status == 'REQUEST'"
                      [class.student-status-label-test-assigned]="studentStatus.status == 'TEST_ASSIGNED'"
                      [class.student-status-label-free-lesson-assigned]="studentStatus.status == 'FREE_LESSON_ASSIGNED'"
@@ -109,6 +126,14 @@
           </div>
         </form>
       </ng-container>
+
+      <app-student-status-modal
+        [studentId]="student.id"
+        [previousStatus]="currentStudentStatus.status"
+        [newStatus]="newStudentStatus"
+        [hasAction]="hasAction(newStudentStatus)"
+        (statusSaved)="onStatusSaved()">
+      </app-student-status-modal>
     </div>
 
     <div class="page-right-menu">
